# Euler2D_A

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL.txt  README.md
docs/Mesh/: mesh.md  mesh.mdj  square.su2
examples/: ControlFile.ees2d
examples/SU2/: naca0012_euler_17x17x1_O_1B.su2  naca0012_euler_33x33x1_O_1B.su2  naca0012_euler_9x9x1_O_1B.su2  square_5x5.su2  square_diagonalized_5x5.su2
src/: CMakeLists.txt  main.cpp
src/inputParser/: CMakeLists.txt  InputParser.cpp  InputParser.h
src/mesh/: CMakeLists.txt  Marker.cpp  Marker.hpp  MarkerContainer.cpp  MarkerContainer.hpp  Mesh.cpp  Mesh.hpp  MeshReader.cpp  MeshReader.hpp  testmeshv1.cpp  testmeshv2.cpp  testmeshv3.cpp  testmeshv4.cpp
src/mesh/generator/: CMakeLists.txt  MeshGenerator.cpp  MeshGenerator.hpp  MeshReader.cpp  MeshReader.hpp  MeshReaderSU2.cpp  MeshReaderSU2.hpp  Parser.cpp  Parser.hpp
src/mesh/metrics/: CMakeLists.txt  MetricsGenerator.cpp  MetricsGenerator.hpp
src/postprocessing/: CMakeLists.txt  Coefficient.cpp  Coefficient.hpp  TecplotWriter.cpp  TecplotWriter.hpp
src/solver/: CMakeLists.txt  Residual.cpp  Residual.hpp  Solver.cpp  Solver.hpp
src/utils/: CMakeLists.txt
src/utils/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
tests/: CMakeLists.txt  test_main.cpp
tests/mesh/: CMakeLists.txt  test_Marker.cpp  test_MeshReader.cpp
tests/mesh/generator/: CMakeLists.txt  square.su2  square_5x5.su2  test_MeshGenerator.cpp  test_MeshReader.cpp  test_Parser.cpp
tests/mesh/metrics/: CMakeLists.txt  single_triangle.su2  test_MetricsGenerator.cpp
tests/solver/: CMakeLists.txt  test_Residual.cpp  test_Solver.cpp
tests/solver/testFiles/: test_roe_eulerexplicit_diagonalized.ees2d
